// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicLinkWaitingScreen/> renders the <ExpiredMagicLinkWaitingScreen/> component 1`] = `
<div
  className="cl-verification-page-container"
  data-test-id="magicLink-waiting-screen"
>
  <div
    className="cl-verification-page-icon-container"
  >
    <svg
      data-filename="../shared/assets/icons/exclamation-triangle.svg"
    />
  </div>
  <h1
    className="cl-verification-page-header"
  >
    This magic link has expired
  </h1>
  <p
    className="cl-verification-page-text"
  >
    Return to the original tab to continue.
  </p>
  <p
    className="cl-verification-page-text cl-verify-page-soft-text"
  >
    You may close this tab.
  </p>
</div>
`;

exports[`<MagicLinkWaitingScreen/> renders the <ExpiredRetryMagicLinkWaitingScreen/> component 1`] = `
<div
  className="cl-verification-page-container"
  data-test-id="magicLink-waiting-screen"
>
  <div
    className="cl-verification-page-icon-container"
  >
    <svg
      data-filename="../shared/assets/icons/exclamation-triangle.svg"
    />
  </div>
  <h1
    className="cl-verification-page-header"
  >
    This magic link has expired
  </h1>
  <p
    className="cl-verification-page-text"
  >
    Send a new one or select another method to continue
  </p>
</div>
`;

exports[`<MagicLinkWaitingScreen/> renders the <FailedMagicLinkWaitingScreen/> component 1`] = `
<div
  className="cl-verification-page-container"
  data-test-id="magicLink-waiting-screen"
>
  <div
    className="cl-verification-page-icon-container"
  >
    <svg
      data-filename="../shared/assets/icons/exclamation-triangle.svg"
    />
  </div>
  <h1
    className="cl-verification-page-header"
  >
    This magic link is invalid
  </h1>
  <p
    className="cl-verification-page-text"
  >
    Return to the original tab to continue.
  </p>
  <p
    className="cl-verification-page-text cl-verify-page-soft-text"
  >
    You may close this tab.
  </p>
</div>
`;

exports[`<MagicLinkWaitingScreen/> renders the <MagicLinkWaitingScreen/> component 1`] = `
<div
  className="cl-verification-page-container"
  data-test-id="magicLink-waiting-screen"
>
  <div
    className="cl-verification-page-icon-container"
  >
    <svg
      data-filename="../shared/assets/icons/tick-shield.svg"
    />
  </div>
  <h1
    className="cl-verification-page-header"
  >
    header
  </h1>
  <p
    className="cl-verification-page-text"
  >
    main text
  </p>
  <p
    className="cl-verification-page-text"
  >
    secondary text
  </p>
  <p
    className="cl-verification-page-text cl-verify-page-soft-text"
  >
    notice text
  </p>
</div>
`;

exports[`<MagicLinkWaitingScreen/> renders the <VerifiedMagicLinkWaitingScreen/> component 1`] = `
<div
  className="cl-verification-page-container"
  data-test-id="magicLink-waiting-screen"
>
  <div
    className="cl-verification-page-icon-container"
  >
    <svg
      data-filename="../shared/assets/icons/tick-shield.svg"
    />
  </div>
  <h1
    className="cl-verification-page-header"
  >
    Successfully signed in
  </h1>
  <p
    className="cl-verification-page-text"
  >
    Return to the original tab to continue.
  </p>
  <p
    className="cl-verification-page-text cl-verify-page-soft-text"
  >
    You may close this tab.
  </p>
</div>
`;

exports[`<MagicLinkWaitingScreen/> renders the <VerifiedSwitchTabMagicLinkWaitingScreen/> component 1`] = `
<div
  className="cl-verification-page-container"
  data-test-id="magicLink-waiting-screen"
>
  <div
    className="cl-verification-page-icon-container"
  >
    <svg
      data-filename="../shared/assets/icons/switch-arrows.svg"
    />
  </div>
  <h1
    className="cl-verification-page-header"
  >
    Signed in on other tab
  </h1>
  <p
    className="cl-verification-page-text"
  >
    Switch to the tab opened by the magic link to continue.
  </p>
  <p
    className="cl-verification-page-text cl-verify-page-soft-text"
  >
    You may close this tab.
  </p>
</div>
`;
